Add zip code proximity and pharmacies
